# seeds-authenticator

./: .env-example  .gitignore  .travis.yml  Cargo.toml  README.md  chapter_1.html  index.html  print.html  searchindex.js  searchindex.json  seeds-authenticator.service
.github/workflows/: correct_keys.yml  deploy-to-aws  deploy-to-aws.yml  main.yml
config/: environment-example.toml
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md
migrations/2021-06-15-180211_create_authentication_entries/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  router.rs  schema.rs  tests.rs  web.rs
src/api/: check.rs  info.rs  invalidate.rs  mod.rs  new.rs
src/models/: authentication_entries.rs  mod.rs
src/utils/: blockchain.rs  blockchain_updater.rs  errors.rs  helpers.rs  logger.rs  mod.rs  settings.rs  signature.rs  throttling.rs  validate.rs
tests/: check.rs  info.rs  invalidate.rs  new.rs
