[package]
name = "authenticator"
version = "0.1.0"
authors = ["cascalheira"]
edition = "2018"

[dependencies]
actix-web = { version = "3", features=["rustls"] }
actix = "0.10"
env_logger = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.2"
config = "0.11"
uuid = { version = "0.8", features = ["serde", "v4"] }
hmac = "0.11.0"
sha2 = "0.9.5"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
diesel = { version = "1.4.7", features = ["postgres", "uuidv07", "serde_json", "chrono", "r2d2"] }
dotenv = "0.15.0"
ureq = {version = "2.1.1", features = ["json"]}
tokio = { version = "1.7.1", features = ["full"] }

[dev-dependencies]
actix-rt = "1"