[package]
name = "authenticator"
version = "0.1.0"
authors = ["cascalheira"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "authenticator"

[dependencies]
actix-web = { version = "3", features=["rustls"] }
actix = "0.10"
env_logger = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.2"
config = "0.11"
uuid = { version = "0.8", features = ["serde", "v4"] }
hmac = "0.11.0"
sha2 = "0.9.5"
base64 = "0.13.0"
futures = "0.3"
ureq = {version = "2.1.1", features = ["json"]}
tokio = { version = "1.7.1", features = ["full"]}
sled = "0.34.6"
sled-extensions = {version = "0.2.0", features = ["bincode"]}
chrono = "0.4"
once_cell = "1.8.0"
lazy_static = "1.4.0"

[dev-dependencies]
actix-rt = "1.1.1"
