[package]
name = "authenticator"
version = "0.1.0"
authors = ["cascalheira"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features=["json"] }
chrono = "0.4"
config = "0.11"
serde = { version = "1", features = ["derive"] }
sha2 = "0.9.5"
hmac = "0.11.0"
base64 = "0.13.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
once_cell = "1.8.0"
tokio = { version = "1.7.1", features = ["full"]}
ureq = {version = "2.1.1", features = ["json"]}
serde_json = "1"


sled = "0.34.4"
sled-extensions = { version = "0.2.0", features = ["bincode"]}